<resources>
    <string name="app_name">AoTu</string>
    <string name="logo">AoTu</string>
    <!-- menu -->
    <string name="my_work">我的工作</string>
    <string name="my_meeting">我的会议</string>
    <string name="submit_report">提交报表</string>
    <string name="apply_meeting">发布会议</string>
    <!-- 抽屉 -->
    <string name="drawer_open">抽屉打开</string>
    <string name="drawer_close">抽屉关闭</string>
    <string name="bar_notice">通知</string>
    <string name="user_name">用户名</string>
    <string name="pass_word">密码</string>
    <string name="login">登陆</string>
    <string name="submit_daily">提交日报</string>
    <string name="theme">主题：</string>
    <string name="meeting_people">人员：</string>
    <string name="meeting_time">时间：</string>
    <string name="meeting_edit">编辑</string>
    <string name="meeting_theme">主题</string>
    <string name="apply_meeting_people">会议人员</string>
    <string name="apply_meeting_time">会议时间</string>
    <string name="grade_daily">日报管理</string>
    <string name="grade_weekly">周报管理</string>

    <string-array name="sp_people">
        <item>测试</item>
    </string-array>

    <string-array name="sp_time">
        <item>36周 8.27—9.1</item>
    </string-array>
</resources>
