<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <TextView
        android:id="@id/tv_logo_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/app_name"
        android:textSize="32.0sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.2" />

    <LinearLayout
        android:id="@id/ll_userName"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_logo_login"
        app:layout_constraintVertical_bias="0.1">

        <TextView
            android:id="@+id/tv_userName"
            android:layout_width="0.0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:gravity="center"
            android:text="@string/user_name"
            android:textSize="18.0sp" />

        <EditText
            android:id="@+id/et_userName"
            android:layout_width="0.0dip"
            android:layout_height="wrap_content"
            android:layout_weight="4.0"
            android:inputType="text" />
    </LinearLayout>

    <LinearLayout
        android:id="@id/ll_passWord"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ll_userName"
        app:layout_constraintVertical_bias="0.1">

        <TextView
            android:id="@+id/tv_passWord"
            android:layout_width="0.0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:gravity="center"
            android:text="@string/pass_word"
            android:textSize="18.0sp" />

        <EditText
            android:id="@+id/et_passWord"
            android:layout_width="0.0dip"
            android:layout_height="wrap_content"
            android:layout_weight="4.0"
            android:inputType="textPassword" />
    </LinearLayout>

    <Button
        android:id="@+id/bt_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textSize="18.0sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ll_passWord"
        app:layout_constraintVertical_bias="0.1" />
</android.support.constraint.ConstraintLayout>