<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardUseCompatPadding="true"
        app:cardCornerRadius="8dp"
        app:cardElevation="8dp"
        app:contentPadding="8dp">
        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">
                <TextView
                    android:text="@string/theme"
                    android:gravity="center"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent" />
                <TextView
                    android:id="@+id/tv_meeting_theme"
                    android:text="日志APP的功能"
                    android:gravity="center_vertical"
                    android:layout_width="0dp"
                    android:layout_weight="6"
                    android:layout_height="match_parent" />
            </LinearLayout>
            <LinearLayout
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">
                <TextView
                    android:text="@string/meeting_people"
                    android:gravity="center"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent" />
                <TextView
                    android:id="@+id/tv_meeting_people"
                    android:text="项目经理"
                    android:gravity="center_vertical"
                    android:layout_width="0dp"
                    android:layout_weight="6"
                    android:layout_height="match_parent" />
            </LinearLayout>
            <LinearLayout
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">
                <TextView
                    android:text="@string/meeting_time"
                    android:gravity="center"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent" />
                <TextView
                    android:id="@+id/tv_meeting_time"
                    android:text="2018/08/28 15:30—16:30"
                    android:gravity="center_vertical"
                    android:layout_width="0dp"
                    android:layout_weight="4.5"
                    android:layout_height="match_parent" />
                <Button
                    android:id="@+id/bt_edit"
                    android:text="@string/meeting_edit"
                    android:visibility="invisible"
                    android:padding="0dp"
                    android:layout_width="0dp"
                    android:layout_weight="1.5"
                    android:layout_height="match_parent" />
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>