<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:id="@+id/ll_apply_meeting_theme"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHeight_percent="0.1"
        android:orientation="horizontal">
        <TextView
            android:text="@string/meeting_theme"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:background="@drawable/border_top_bottom_right"
            android:layout_height="match_parent" />
        <TextView
            android:id="@+id/tv_meeting_theme"
            android:padding="@dimen/x5"
            android:gravity="top"
            android:layout_width="0dp"
            android:layout_weight="5"
            android:background="@drawable/border_top_bottom"
            android:layout_height="match_parent" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/ll_apply_meeting_people"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/ll_apply_meeting_theme"
        app:layout_constraintHeight_percent="0.1"
        android:orientation="horizontal">
        <TextView
            android:text="@string/apply_meeting_people"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:background="@drawable/border_l"
            android:layout_height="match_parent" />
        <TextView
            android:id="@+id/tv_people"
            android:padding="@dimen/x5"
            android:gravity="top"
            android:layout_width="0dp"
            android:layout_weight="5"
            android:background="@drawable/border_"
            android:layout_height="match_parent" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/ll_apply_meeting_time"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/ll_apply_meeting_people"
        app:layout_constraintHeight_percent="0.1"
        android:orientation="horizontal">
        <TextView
            android:text="@string/apply_meeting_time"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:background="@drawable/border_l"
            android:layout_height="match_parent" />
        <TextView
            android:id="@+id/tv_time"
            android:padding="@dimen/x5"
            android:gravity="top"
            android:layout_width="0dp"
            android:layout_weight="5"
            android:background="@drawable/border_"
            android:layout_height="match_parent" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/ll_apply_meeting_item"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/ll_apply_meeting_time"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:background="@drawable/border_l"
            android:orientation="vertical"
            android:gravity="center_vertical">
            <TextView
                android:text="会"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <TextView
                android:text="议"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <TextView
                android:text="纪"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <TextView
                android:text="要"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <TextView
            android:id="@+id/tv_item"
            android:padding="@dimen/x5"
            android:gravity="top"
            android:layout_width="0dp"
            android:layout_weight="5"
            android:background="@drawable/border_"
            android:layout_height="match_parent" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>